SSCSFT-25 UC WCA Journey - Start date
Fix failing unit tests