@@ -1,9 +1,13 @@
 package uk.gov.hmcts.reform.sscs.ccd.presubmit.writefinaldecision.uc.scenarios;
 
+import static java.time.LocalDate.now;
+import static java.util.Collections.singletonList;
+import static org.assertj.core.api.Assertions.assertThat;
+import static uk.gov.hmcts.reform.sscs.util.DateUtilities.today;
+
 import java.util.Arrays;
 import java.util.List;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import uk.gov.hmcts.reform.sscs.ccd.presubmit.writefinaldecision.uc.UcTemplateContent;
 import uk.gov.hmcts.reform.sscs.model.docassembly.Descriptor;
 import uk.gov.hmcts.reform.sscs.model.docassembly.WriteFinalDecisionTemplateBody;
@@ -14,10 +18,10 @@ public class UcScenario5Test {
     public void testScenario5() {
 
         List<Descriptor> schedule6Descriptors =
-            Arrays.asList(Descriptor.builder()
-                .activityQuestionValue("Mobilising Unaided")
-                .activityAnswerValue("1")
-                .activityAnswerLetter("c").activityAnswerPoints(9).build());
+            singletonList(Descriptor.builder()
+                              .activityQuestionValue("Mobilising Unaided")
+                              .activityAnswerValue("1")
+                              .activityAnswerLetter("c").activityAnswerPoints(9).build());
 
         WriteFinalDecisionTemplateBody body =
             WriteFinalDecisionTemplateBody.builder()
@@ -35,37 +39,40 @@ public class UcScenario5Test {
                 .schedule8Paragraph4Applicable(true)
                 .schedule9Paragraph4Applicable(false)
                 .dwpReassessTheAward("noRecommendation")
+                .ucCapabilityAssessmentStartDate(now())
                 .ucSchedule6Descriptors(schedule6Descriptors).build();
 
         UcTemplateContent content = UcScenario.SCENARIO_5.getContent(body);
 
-        String expectedContent = "The appeal is allowed.\n"
-            + "\n"
-            + "The decision made by the Secretary of State on 20/09/2020 is set aside.\n"
-            + "\n"
-            + "Felix Sydney has limited capability for work. The matter is now remitted to the Secretary of State to make a final decision upon entitlement to Universal Credit (UC).\n"
-            + "\n"
-            + "In applying the Work Capability Assessment 9 points were scored from the activities and descriptors in Schedule 6 of the UC Regulations 2013 made up as follows:\n"
-            + "\n"
-            + "Mobilising Unaided\tc.1\t9\n"
-            + "\n"
-            + "\n"
-            + "Felix Sydney does not have limited capability for work-related activity because no descriptor from Schedule 7 of the UC Regulations applied. Schedule 9, paragraph 4 did not apply.\n"
-            + "\n"
-            + "My first reasons\n"
-            + "\n"
-            + "My second reasons\n"
-            + "\n"
-            + "Something else\n"
-            + "\n"
-            + "This has been an oral (face to face) hearing. Felix Sydney the appellant attended the hearing today and the Tribunal considered the appeal bundle to page A1. First Tier Agency representative attended on behalf of the Respondent.\n"
-            + "\n"
-            + "Any recommendation given below does not form part of the Tribunal's decision and is not binding on the Secretary of State. The Tribunal makes no recommendation as to when the Department should reassess Felix Sydney.\n"
-            + "\n";
+        String expectedContent = """
+            The appeal is allowed.
+            
+            The decision made by the Secretary of State on 20/09/2020 is set aside.
+            
+            Felix Sydney has limited capability for work from %s.
+            
+            In applying the Work Capability Assessment 9 points were scored from the activities and descriptors in Schedule 6 of the Universal Credit (UC) Regulations 2013 made up as follows:
+            
+            Mobilising Unaided\tc.1\t9
+            
+            
+            Felix Sydney does not have limited capability for work-related activity because no descriptor from Schedule 7 of the UC Regulations applied. Schedule 9, paragraph 4 did not apply.
+            
+            My first reasons
+            
+            My second reasons
+            
+            Something else
+            
+            This has been an oral (face to face) hearing. Felix Sydney the appellant attended the hearing today and the Tribunal considered the appeal bundle to page A1. First Tier Agency representative attended on behalf of the Respondent.
+            
+            Any recommendation given below does not form part of the Tribunal's decision and is not binding on the Secretary of State. The Tribunal makes no recommendation as to when the Department should reassess Felix Sydney.
+            
+            """.formatted(today());
 
-        Assert.assertEquals(11,  content.getComponents().size());
+        assertThat(content.getComponents()).hasSize(11);
 
-        Assert.assertEquals(expectedContent, content.toString());
+        assertThat(content.toString()).isEqualTo(expectedContent);
 
     }
 
@@ -73,7 +80,7 @@ public class UcScenario5Test {
     public void testScenario5NoSchedule6Descriptors() {
 
         List<Descriptor> schedule6Descriptors =
-            Arrays.asList();
+            List.of();
 
         WriteFinalDecisionTemplateBody body =
             WriteFinalDecisionTemplateBody.builder()
@@ -91,34 +98,37 @@ public class UcScenario5Test {
                 .schedule8Paragraph4Applicable(true)
                 .schedule9Paragraph4Applicable(false)
                 .dwpReassessTheAward("noRecommendation")
+                .ucCapabilityAssessmentStartDate(now())
                 .ucSchedule6Descriptors(schedule6Descriptors).build();
 
         UcTemplateContent content = UcScenario.SCENARIO_5.getContent(body);
 
-        String expectedContent = "The appeal is allowed.\n"
-            + "\n"
-            + "The decision made by the Secretary of State on 20/09/2020 is set aside.\n"
-            + "\n"
-            + "Felix Sydney has limited capability for work. The matter is now remitted to the Secretary of State to make a final decision upon entitlement to Universal Credit (UC).\n"
-            + "\n"
-            + "In applying the Work Capability Assessment 0 points were scored from the activities and descriptors in Schedule 6 of the UC Regulations 2013.\n"
-            + "\n"
-            + "Felix Sydney does not have limited capability for work-related activity because no descriptor from Schedule 7 of the UC Regulations applied. Schedule 9, paragraph 4 did not apply.\n"
-            + "\n"
-            + "My first reasons\n"
-            + "\n"
-            + "My second reasons\n"
-            + "\n"
-            + "Something else\n"
-            + "\n"
-            + "This has been an oral (face to face) hearing. Felix Sydney the appellant attended the hearing today and the Tribunal considered the appeal bundle to page A1. First Tier Agency representative attended on behalf of the Respondent.\n"
-            + "\n"
-            + "Any recommendation given below does not form part of the Tribunal's decision and is not binding on the Secretary of State. The Tribunal makes no recommendation as to when the Department should reassess Felix Sydney.\n"
-            + "\n";
+        String expectedContent = """
+            The appeal is allowed.
+            
+            The decision made by the Secretary of State on 20/09/2020 is set aside.
+            
+            Felix Sydney has limited capability for work from %s.
+            
+            In applying the Work Capability Assessment 0 points were scored from the activities and descriptors in Schedule 6 of the Universal Credit (UC) Regulations 2013.
+            
+            Felix Sydney does not have limited capability for work-related activity because no descriptor from Schedule 7 of the UC Regulations applied. Schedule 9, paragraph 4 did not apply.
+            
+            My first reasons
+            
+            My second reasons
+            
+            Something else
+            
+            This has been an oral (face to face) hearing. Felix Sydney the appellant attended the hearing today and the Tribunal considered the appeal bundle to page A1. First Tier Agency representative attended on behalf of the Respondent.
+            
+            Any recommendation given below does not form part of the Tribunal's decision and is not binding on the Secretary of State. The Tribunal makes no recommendation as to when the Department should reassess Felix Sydney.
+            
+            """.formatted(today());
 
-        Assert.assertEquals(10,  content.getComponents().size());
+        assertThat(content.getComponents()).hasSize(10);
 
-        Assert.assertEquals(expectedContent, content.toString());
+        assertThat(content.toString()).isEqualTo(expectedContent);
 
     }
 }
